# mekuri

./: CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  viewer.html  vite.config.ts
.claude/: settings.json
.claude/agents/: layer-boundary-reviewer.md
.claude/skills/quality-gate/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  directory-structure.md  requirements.md  tech-stack.md
src/: App.tsx  ViewerApp.tsx  main.tsx  viewer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archive/: mod.rs  rar.rs  zip.rs
src-tauri/src/commands/: archive.rs  fs.rs  mod.rs
src/api/: directory.test.ts  directory.ts  favorites.ts  settings.ts  store.ts
src/components/FavoritesSidebar/: FavoritesSidebar.tsx
src/components/FileList/: FileList.tsx
src/components/FolderTree/: FolderTree.tsx  TreeNode.tsx
src/components/Icons/: Icons.tsx
src/components/SpreadViewer/: PageImage.tsx  SpreadViewer.tsx
src/hooks/: useArchive.ts  useArchiveLoader.ts  useColumnResize.ts  useContextMenu.ts  useDirectory.ts  usePdfLoader.ts  useSettings.ts  useSiblingNavigation.ts  useWindowResize.ts
src/styles/: global.css  viewer.css
src/types/: index.ts
src/utils/: constants.ts  errorToString.test.ts  errorToString.ts  fileType.test.ts  fileType.ts  pdf.ts  spreadLayout.test.ts  spreadLayout.ts  windowLabel.test.ts  windowLabel.ts
