[package]
name = "mekuri"
version = "1.2.0"
edition = "2021"
description = "Archive image viewer with spread display"
license = "MIT"

[lib]
name = "mekuri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "4", default-features = false, features = ["deflate"] }
unrar = "0.5"
natord = "1"
base64 = "0.22"
tempfile = "3"
trash = "5"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
